2006-02-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: Fixed a problem with the same ASSERT_LEVEL
	definition in both debug and standard target libraries.

	* TODO: Updated to reflect recent brainstorming among developers.
	
	* doc/local/linking.doc: Minor updates to reflect recent changes.

	* itpp-config.in, itpp.pc.in: Added `--cflags-opt' and
	`--debug-opt' switches to `itpp-config' script. Simple `--cflags'
	switch does not include any optimisation flags in both script.

	* INSTALL, README, doc/local/installation.doc,
	doc/local/linking.doc: Documentation updated to reflect recent
	changes in the configuration process.
	
	* configure.ac, **/Makefile.am, itpp-config.in, itpp.pc.in: Major
	changes in the configuration process. Since now it is possible to
	build and install two separate libraries: the optimised
	`libitpp.*' and debug `libitpp_debug.*'. The latter one is only
	build when `--enable-debug' switch is used during configuration.
	`itpp-config' script has been extended with `--cflags-debug' and 
	`--libs-debug' switches.
	Besides, if CXXFLAGS is not set in the shell environment, it is
	initialised with "-O3 -pipe" or "-O3" flags by default.

2006-02-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/matfunc_test.cpp: Minor fix of rounding precision.

	* itpp-config.in, itpp.pc.in: Readded CXXFLAGS to the
	configuration scripts.

	* configure.ac, INSTALL, doc/local/installation.doc: Removed
	`--with-march' GCC-specific optimisation switch. CXXFLAGS should
	be used instead.

2006-02-16  Erik G. Larsson  <erik_g_larsson@sourceforge.net>

	* doc/local/installation.doc, doc/local/index.doc.in: Minor update

	* itpp/comm/llr.*, tests/llr_test.ref: Minor updates

	* itpp/comm/modulator_nd.*, tests/modulator_nd.*,
	itpp/comm/sources.mk, tests/Makefile.am: First version of the
	vector/MIMO modulator class added
	
2006-02-14  Adam Piatyszek  <ediap@users.sourceforge.net>
