@@ -1,5 +1,5 @@
 /*! 
-\page tutorial Tutorial
+\page tutorial Tutorials
 \addindex Tutorial
 
 This page consists of a number of tutorial examples that will help you getting
@@ -7,18 +7,27 @@ started using IT++. Most examples show how to construct some simple
 communication system simulations. The source codes and Makefile to compile
 these examples can be found in \c {ITPP_HOME}/doc/tutorial/src
 
-Examples:
+Examples of basic functionality:
 <ul>
 <li> \ref vector_and_matrix </li>
 <li> \ref itfile </li>
+<li> \ref timer </li>
+</ul>
+<br>
+Examples of communications related functions:
+<ul>
 <li> \ref bpsk </li>
 <li> \ref interleaver </li>
-<li> \ref timer </li>
 <li> \ref qpsk_simulation </li>
 <li> \ref reedsolomon </li>
 <li> \ref convcode </li>
 <li> \ref spread </li>
 <li> \ref rayleigh </li>
+</ul>
+<br>
+Other:
+<ul>
+<li> \ref matlab_itpp </li>
 </ul>
 
 
